@@ -94,7 +94,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.4</version>
+        <configuration>
+          <argLine>${surefire.argLine} -XX:+EnableDynamicAgentLoading</argLine>
+        </configuration>
+      </plugin>
 		</plugins>
 	</build>
 
